--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "sass": "^1.86.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
