--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "aos": "^2.3.4",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -14,6 +15,7 @@
     "typescript": "^5.8.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "vite": "^4.5.9"
   }
 }
